--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glob": "^11.0.0",
     "lodash": "^4.17.21",
     "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "yup": "^1.4.0"
   }
 }
