--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.18.0",
     "glob": "^11.0.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3",
     "yup": "^1.4.0"
