--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "sequelize": "^6.37.3",
     "yup": "^1.4.0"
   }
